[project]
name = "python-server"
version = "0.1.0"
description = "Facilitates functionality better provided by Python libraries"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.1",
    "flask>=3.0.3",
    "pillow>=10.4.0",
    "pillow-heif>=1.1.0",
    "protobuf>=5.28.2",
    "requests>=2.32.3",
    "sqlite-vec>=0.1.6",
    "torch>=2.4.1",
    "torchvision>=0.21.0",
    "transformers>=4.51.2",
]
